apps/zoonavigator/30.Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zoonavigator
  namespace: zoonavigator
  labels:
    app.kubernetes.io/component: zoonavigator
    app.kubernetes.io/name: zoonavigator
  annotations:
    deployment.kubernetes.io/revision: '1'
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: zoonavigator
      app.kubernetes.io/name: zoonavigator
  template:
    metadata:
      labels:
        app.kubernetes.io/component: zoonavigator
        app.kubernetes.io/name: zoonavigator
    spec:
      containers:
        - name: zoonavigator
          image: registry.ubuntu.home/docker.io/elkozmon/zoonavigator:2.0.0
          ports:
            - name: zoonavigator
              containerPort: 9000
              protocol: TCP
          resources:
            limits:
              cpu: 200m
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 100Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/os: linux
      serviceAccountName: zoonavigator
      serviceAccount: zoonavigator
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
