apps/zoonavigator/50.Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zoonavigator-ingress
  namespace: zoonavigator
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: nginx-ingress-microk8s
  annotations:
    prometheus.io/port: "9113"
    spec.ingressClassName: public
spec:
  rules:
  - host: .k8s.home
    http:
      paths:
        - path: /zoonavigator
          pathType: Prefix
          backend:
            service:
              name: zoonavigator
              port:
                number: 80
